// $Id$

Demo x.x-x.x, xxxx-xx-xx
------------------------


Demo 6.x-1.x, xxxx-xx-xx
------------------------
by sun: Fixed length of form button captions on snapshot management form.
#370402 by sun: Added option to download snapshot files.
#496620 by evoltech: Fixed paths in README.txt.
by smk-ka: Added admin_menu cache table to exclude list.
#489666 by stella: Added hook invocation after successful reset.
by sun: Fixed coding-style.
#424524 by John Money, sun: Fixed site not reset on all cron runs.
#256714 by sun: Fixed site name sub-folder no longer appended.
#256714 by smk-ka, sun: Removed site name sub-folder from dump directory path.
#393186 by sun: Fixed fatal error: Only variables can be passed by reference.
#372113 by sun: Fixed not all cache tables are skipped.
by smk-ka: Made watchdog messages translatable (fixed a potx warning).
#369711 by smk-ka: Added confirmation before deleting a snapshot.
#369642 by smk-ka: Added checkbox to define new snapshot as default.
#329182 by sun: Moved menu items below admin/build.
#299841 by sun: Fixed wrong function arguments for watchdog().
#286781 by alex_b: Added function return value for demo_reset().
#272820 by sun: Increased maxlength for snapshot file names.
#269561 by smk-ka: Performance: Disable indices to speed up import.
#272526 by smk-ka: Added file size to snapshot list.
#268056 by sun: Fixed incomplete snapshots due to max_execution_time reached.
#265801 by smk-ka: Added exclusion of data in cache tables for snapshots.
#312215 by rondp: Added foreign key support.
#294879 by smk-ka: Moved admin functions into include file.


Demo 6.x-1.1, 2008-04-29
------------------------
#226135 by smk-ka: Added MySQLi support. Setting SQL_MODE for new dumps to
  avoid generating auto values when encountering a zero value for a serial
  field.
by smk-ka: Fixed generation of table list for multiple database prefixes.


Demo 6.x-1.0, 2008-02-14
------------------------
#221386 by sun: Ported Demo Site to Drupal 6.

