@@ -36,7 +36,7 @@ function demo_menu() {
   $items['admin/build/demo/manage'] = array(
     'title' => 'Manage snapshots',
     'page callback' => 'drupal_get_form',
-    'page arguments' => array('demo_manage'),
+    'page arguments' => array('demo_manage_form'),
     'access arguments' => $admin_access,
     'file' => 'demo.admin.inc',
     'type' => MENU_LOCAL_TASK,
@@ -45,7 +45,7 @@ function demo_menu() {
   $items['admin/build/demo/dump'] = array(
     'title' => 'Create snapshot',
     'page callback' => 'drupal_get_form',
-    'page arguments' => array('demo_dump'),
+    'page arguments' => array('demo_dump_form'),
     'access arguments' => $admin_access,
     'file' => 'demo.admin.inc',
     'type' => MENU_LOCAL_TASK,
@@ -133,11 +133,9 @@ function demo_reset_now_submit($form, &$form_state) {
 function demo_cron() {
   if ($interval = variable_get('demo_reset_interval', 0)) {
     // See if it's time for a reset.
-    $time = $_SERVER['REQUEST_TIME'];
-    if (($time - $interval) >= variable_get('demo_reset_last', 0)) {
+    if (($_SERVER['REQUEST_TIME'] - $interval) >= variable_get('demo_reset_last', 0)) {
       module_load_include('inc', 'demo', 'demo.admin');
       demo_reset(variable_get('demo_dump_cron', 'demo_site'), FALSE);
-      variable_set('demo_reset_last', $time);
     }
   }
 }
