@@ -6,6 +6,7 @@ Demo x.x-x.x, xxxx-xx-xx
 
 Demo 6.x-1.x, xxxx-xx-xx
 ------------------------
+#535754 by smk-ka, sun: Added API functions/hooks to perform dumps and resets.
 by sun: Fixed length of form button captions on snapshot management form.
 #370402 by sun: Added option to download snapshot files.
 #496620 by evoltech: Fixed paths in README.txt.
